--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Escolher Categorias</ion-title>
+    <ion-title>Escolher o tipo de CRIA</ion-title>
   </ion-navbar>
 </ion-header>
 
