--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -9,10 +9,10 @@
 
 <ion-content padding>
   <ion-avatar>
-    <img class="circle" [src]="profileImage">
+    <img width="200" height="200" class="circle" [src]="profileImage">
   </ion-avatar>
-  <h2 text-center>{{cliente?.nome}}</h2>
-  <p text-center>{{cliente?.email}}</p>
+  <h2 text-center>{{usuario?.nome}}</h2>
+  <p text-center>{{usuario?.email}}</p>
 
   <ion-card>
     <ion-card-header>
@@ -27,5 +27,5 @@
       <button *ngIf="picture" ion-button outline block (click)="sendPicture()">Enviar imagem</button>
       <button *ngIf="picture" ion-button outline block (click)="cancel()">Descartar imagem</button>
     </ion-item>
-  </ion-card>  
+  </ion-card>
 </ion-content>
