pequenos ajustes em produtos e usuario

--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -12,7 +12,7 @@
     <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
   </ion-fab>
   <ion-card>
-    <img width="200" height="200" [src]="item?.imageUrl || 'assets/imgs/prod.jpg'"/>
+    <img width="200" height="200" [src]="item?.imageUrl || 'assets/imgs/prod.jpg'" alt=""/>
     <ion-card-content>
       <ion-card-title>
         {{item?.nome}}
