--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -11,7 +11,7 @@
   <ion-list>
     <ion-item *ngFor="let item of items">
       <ion-thumbnail item-start>
-        <img [src]="item.produto.imageUrl || 'assets/imgs/prod.jpg'">
+        <img [src]="item.produto.imageUrl || 'assets/imgs/prod.jpg'" alt="">
       </ion-thumbnail>
       <h2>{{item.produto.nome}}</h2>
       <ion-icon class="nolinebreak" name="remove-circle" color="primary"  (click)="decreaseQuantity(item.produto)"></ion-icon>
