--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-content padding>
-  <h3>Sistema de pedidos</h3>
+  <h3>Login SisWeb CRIA</h3>
 
   <img src="assets/imgs/tela-inicial.png" alt="logo">
 
@@ -14,6 +14,6 @@
     </ion-item>
     <button ion-button block (click)="login()">Entrar</button>
   </form>
-  <button ion-button block outline (click)="signup()">Registrar</button>
+  <button ion-button block outline (click)="signup()">Novo Cadastro</button>
 
 </ion-content>
