--- a/src/pages/order-confirmation/order-confirmation.html
+++ b/src/pages/order-confirmation/order-confirmation.html
@@ -19,7 +19,7 @@
       <ion-list>
         <ion-item *ngFor="let item of cartItems">
           <ion-thumbnail item-start>
-            <img [src]="item.produto.imageUrl || 'assets/imgs/prod.jpg'">
+            <img [src]="item.produto.imageUrl || 'assets/imgs/prod.jpg'" alt="">
           </ion-thumbnail>
           <h2>{{item.produto.nome}}</h2>
           <p class="nolinebreak">{{item.quantidade}}</p>
