--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
   <ion-avatar>
-    <img width="200" height="200" class="circle" [src]="profileImage">
+    <img width="200" height="200" class="circle" [src]="profileImage" alt="">
   </ion-avatar>
   <h2 text-center>{{usuario?.nome}}</h2>
   <p text-center>{{usuario?.email}}</p>
