--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -27,6 +27,6 @@
       <h1>Seu carrinho está vazio</h1>
     </ion-item>
   </ion-list>
-  <button ion-button block (click)="goOn()">Continuar comprando</button>
+  <button ion-button block (click)="goOn()">Fazer outro pedido</button>
   <button *ngIf="total() > 0" ion-button color="secondary" block (click)="checkout()">Finalizar pedido</button>
 </ion-content>
