atualizaçao no frontend pedido e nav

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -1,8 +1,5 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-        <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
@@ -13,7 +10,7 @@
     <ion-card class="welcome-card">
       <img src="/assets/imgs/shapes.svg" alt="" />
       <ion-card-header>
-        <ion-card-title>SisWeb CRIA - Sistema Web do Projeto CRIA</ion-card-title>
+        <ion-card-title style="font-weight: bold; color: black;" >SisWeb CRIA - Sistema Web do Projeto CRIA</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <p> Projeto Cadeira de Rodas Infantil Automatizada</p>
@@ -38,6 +35,7 @@
             <ion-label>
               <h2>Aviso: </h2>
               <p>Fazendo o cadastro e login, o usuário concorda com os Termos de Uso da UNIFESP.</p>
+              <p>Será garantido o sigilo dos dados informados.</p>
             </ion-label>
         </ion-list-header>
         <ion-item>
