--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -13,7 +13,7 @@
     <ion-card class="welcome-card">
       <img src="/assets/imgs/shapes.svg" alt="" />
       <ion-card-header>
-        <ion-card-title>SisWeb CRIA - Sistema Web do Projeto CRIA</ion-card-title>
+        <ion-card-title style="font-weight: bold; color: rgb(25, 114, 65);" >SisWeb CRIA - Sistema Web do Projeto CRIA - Login ativado</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <p> Projeto Cadeira de Rodas Infantil Automatizada</p>
@@ -24,8 +24,10 @@
         <ion-list-header>
           <ion-label>
             <h2>Pedido de uma CRIA: </h2>
-            <p>Para solicitar uma CRIA é necessário preencher as informações referentes à criança que será beneficiada, incluindo as medidas necessárias para a confecção.</p>
-            <p>Se os dados não  estiverem completos, o pedido não será autorizado. Podem ser pedidas informações adicionais via e-mail.</p>
+            <p>Para solicitar uma CRIA é necessário preencher as informações referentes à</p>
+            <p>criança que será beneficiada, incluindo as medidas necessárias para a confecção.</p>
+            <p>Se os dados não  estiverem completos, o pedido não será autorizado.</p>
+            <p>Podem ser solicitadas informações adicionais via e-mail.</p>
             <p>Clique abaixo para fazer um pedido.</p>
           </ion-label>
       </ion-list-header>
