atualizaçao no frontend botao voltar

--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -50,6 +50,18 @@
         </ion-item>
 
         <ion-list-header>
+          <ion-label>
+            <h2>Lista de usuários: </h2>
+            <p>Clique abaixo para ver ou alterar a Lista de Usuários.</p>
+          </ion-label>
+      </ion-list-header>
+        <ion-item>
+            <div class="ion-padding">
+                <button ion-button block outline (click)="profile()">Lista de Usuários</button>
+            </div>
+        </ion-item>
+
+        <ion-list-header>
             <ion-label>
               <h2>Fale conosco: </h2>
               <p>Se tiver alguma dúvida, ou problemas com seu cadastro ou pedido, clique abaixo.</p>
