--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,5 +15,7 @@
     <button ion-button block (click)="login()">Entrar</button>
   </form>
   <button ion-button block outline (click)="signup()">Novo Cadastro</button>
-
+  <ion-item>
+    <button ion-button block outline (click)="back()">Voltar</button>
+  </ion-item>
 </ion-content>
