--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>pages/edit</ion-title>
+    <ion-title>Editar</ion-title>
   </ion-navbar>
 
 </ion-header>
