--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -11,21 +11,27 @@
   <ion-avatar>
     <img width="200" height="200" class="circle" [src]="profileImage" alt="">
   </ion-avatar>
+  <ion-list show-update="true">
   <h2 text-center>{{usuario?.nome}}</h2>
-  <p text-center>{{usuario?.email}}</p>
+  <h3 text-center>{{usuario?.email}}</h3>
+  <h4 text-center>{{usuario?.enderecos["numero"]}}</h4>
 
+
+</ion-list>
   <ion-card>
     <ion-card-header>
-      Enviar imagem de perfil
+
     </ion-card-header>
     <ion-item *ngIf="picture">
       <img [src]="picture">
     </ion-item>
+<!-- Camera
     <ion-item>
       <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button>
       <button ion-button block (click)="getGalleryPicture()" [disabled]="cameraOn">Galeria</button>
       <button *ngIf="picture" ion-button outline block (click)="sendPicture()">Enviar imagem</button>
       <button *ngIf="picture" ion-button outline block (click)="cancel()">Descartar imagem</button>
     </ion-item>
+-->
   </ion-card>
 </ion-content>
