--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -39,6 +39,18 @@
 
         <ion-list-header>
           <ion-label>
+            <h2>Lista de pedidos: </h2>
+            <p>Clique abaixo para ver ou alterar a Lista de Pedidos.</p>
+          </ion-label>
+      </ion-list-header>
+      <ion-item>
+          <div class="ion-padding">
+              <button ion-button block outline (click)="pedidos()">Lista de Pedidos</button>
+          </div>
+      </ion-item>
+
+        <ion-list-header>
+          <ion-label>
             <h2>Seu cadastro: </h2>
             <p>Clique abaixo para ver ou alterar seu cadastro.</p>
           </ion-label>
