atualizaçao no frontend 09/02 16:50

--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -69,7 +69,7 @@
       </ion-list-header>
         <ion-item>
             <div class="ion-padding">
-                <button ion-button block outline (click)="profile()">Lista de Usuários</button>
+                <button ion-button block outline (click)="usuarios()">Lista de Usuários</button>
             </div>
         </ion-item>
 
