--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -1,18 +1,30 @@
-<!--
-  Generated template for the PagesEditPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Editar</ion-title>
+    <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Lista de Usuários</ion-title>
   </ion-navbar>
-
 </ion-header>
-
 
 <ion-content padding>
 
+  <ion-list>
+
+    <ion-item *ngFor="let usuarios of usuarios">
+      <ion-avatar item-start>
+        {{usuarios.id}}
+      </ion-avatar>
+      <button ion-button color="danger" item-end outline>Apagar</button>
+      <button ion-button color="secundary" item-end outline> Editar </button>
+        <h2 style="font-weight: bolder">Usuário: {{usuarios.nome}} CPF/CNPJ: {{usuarios.cpf}} Fone: {{usuarios.telefone}}</h2>
+        <h3>Endereco: {{usuarios.logradouro}} {{usuarios.numero}} {{usuarios.complemento}}Bairro: {{usuarios.bairro}}
+             {{usuarios.cidade}} - {{usuarios.estado}} CEP: {{usuarios.cep}}</h3>
+    </ion-item>
+
+  </ion-list>
+
+  <ion-item>
+    <button ion-button block outline (click)="backMenu()">Voltar</button>
+  </ion-item>
 </ion-content>
