--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,25 +1,23 @@
-<!--
-  Generated template for the PagesListPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
+    <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Lista de Pedidos</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-  <ion-avatar>
-    <img   src="" />
-  </ion-avatar>
+
   <ion-list>
+
     <ion-item *ngFor="let pedidos of pedidos">
-        <h2 style="font-weight: bolder">Usuário: {{pedidos.id}} Pedido: {{pedidos.ped}} Criança: {{pedidos.nome}}</h2>
+      <ion-avatar item-start>
+        Pedido {{pedidos.ped}}
+      </ion-avatar>
+      <button ion-button color="danger" item-end outline>Apagar</button>
+      <button ion-button color="secundary" item-end outline> Editar </button>
+        <h2 style="font-weight: bolder">Usuário: {{pedidos.id}} Criança: {{pedidos.nome}}</h2>
         <h3>Tipo CRIA: {{pedidos.produto}} Medidas A: {{pedidos.med_a}} B: {{pedidos.med_b}}
            C: {{pedidos.med_c}} D: {{pedidos.med_d}} E: {{pedidos.med_e}} F: {{pedidos.med_f}} Descrição: {{pedidos.descricao}}</h3>
     </ion-item>
@@ -27,7 +25,7 @@
   </ion-list>
 
   <ion-item>
-    <button ion-button block outline (click)="back()">Voltar</button>
+    <button ion-button block outline (click)="backMenu()">Voltar</button>
   </ion-item>
 </ion-content>
 
