atualizaçao no frontend 10/02 23:00

--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Escolher o tipo de CRIA</ion-title>
+    <ion-title>Categorias</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -19,5 +19,4 @@
       <h2> {{ item.nome }} </h2>
     </button>
   </ion-list>
-
 </ion-content>
