atualizaçao no frontend 11/02 12:30

--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -18,5 +18,7 @@
       </ion-thumbnail>
       <h2> {{ item.nome }} </h2>
     </button>
+    <h4> Este é o modelo de cadeira de rodas infantil automatizada disponível no momento.</h4>
+    <p>Clique no ícone acima para seguir com o pedido.</p>
   </ion-list>
 </ion-content>
