--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -57,7 +57,7 @@
       </ion-list-header>
         <ion-item>
             <div class="ion-padding">
-                <button ion-button block outline (click)="profile2()">Perfil de Usuário</button>
+                <button ion-button block outline (click)="profile()">Perfil de Usuário</button>
             </div>
         </ion-item>
 
