--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -27,6 +27,8 @@
       <h1>Seu carrinho está vazio</h1>
     </ion-item>
   </ion-list>
-  <button ion-button block (click)="goOn()">Fazer outro pedido</button>
+  <button ion-button block (click)="goOn()">Fazer pedido para outra criança</button>
   <button *ngIf="total() > 0" ion-button color="secondary" block (click)="checkout()">Finalizar pedido</button>
+  <p>Você pode cadastrar outra criança neste pedido, ou fazer um pedido separado em outro momento.</p>
+
 </ion-content>
