--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -22,11 +22,10 @@
         <img [src]="item.imageUrl || 'assets/imgs/prod.jpg'">
       </ion-thumbnail>
       <h2>{{item.nome}}</h2>
-      <p>{{item.preco | currency}}</p>
     </button>
   </ion-list>
-
+  <p>Escolha entre a opção para destro ou para canhoto.</p>
   <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
-  </ion-infinite-scroll>  
+  </ion-infinite-scroll>
 </ion-content>
